--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "scripts": {
-     "test": "jest"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^29.1.1",
     "jest": "^29.1.2",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   }
 }
